--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,4 +17,4 @@ jobs:
         uses: actions/setup-go@v4
 
       - name: Build app
-        run: ../../scripts/buildprod.sh
+        run: /scripts/buildprod.sh
