--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,3 +18,14 @@ jobs:
 
       - name: Build app
         run: scripts/buildprod.sh
+
+      - id: Authenticate gcloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: Push Image to gcloud
+        run: gcloud builds submit --tag us-central1-docker.pkg.dev/bamboo-copilot-462110-t4/notely-ar-repo:latest
